form input padding fix on firefox

--- a/src/sass/elements/_form.scss
+++ b/src/sass/elements/_form.scss
@@ -6,7 +6,7 @@
         width: 100%;
         background-color: $color-white;
         margin-bottom: 1.7rem;
-        padding: 1.2rem;
+        padding-left: 1.2rem;
         border: 1px solid $color-grey-dark;
     }
     &__field--small {
